- Add multilanguage support - Add english version

--- a/_posts/2022-11-13-intro_rl.md
+++ b/_posts/2022-11-13-intro_rl.md
@@ -2,7 +2,7 @@
 layout: post
 title: A simple introduction to Reinforcement Learning
 subtitle: How we make an AI play 4 in a row
-gh-repo: daattali/beautiful-jekyll
+gh-repo: itsadeepizza/4inarow
 gh-badge: [star, fork, follow]
 tags: [reinforcement learning]
 thumbnail-img: /assets/img/meme_RL.png
