Update SNN and add VAE

--- a/_posts/2023-05-19-intro_rl.md
+++ b/_posts/2023-05-19-intro_rl.md
@@ -8,13 +8,15 @@ tags: [reinforcement learning]
 thumbnail-img: /assets/img/meme_RL.png
 share-img: /assets/img/meme_RL.png
 comments: true
+lang: eng
+languages: [ita, eng]
 ---
 
 
 
-# 1. (Saverio) Obiettivi: imparare il reinforcement learning con il forza 4 + spiegazione del gioco
+# 1. What is reinforcement learning?
 
-
+![](https://i.imgur.com/EkJQYjw.png)
 
 What do you do if you want to teach your dog something like how to sit at command? you give it a treat when it do as wanted and you don't if it doesnt so hopefully the positive reward it gets will make it obey the command
 
@@ -22,32 +24,46 @@ What do you do if you want to teach your dog something like how to sit at comman
 
 It turns out that the same principle works on machines as well and it is called "reinforcement learning" because of the reinforcement that the machine receive after doing something that ends up into a positive reward.
 
-![](https://i.imgur.com/SAVqJLa.png)
 
-![](https://i.imgur.com/EkJQYjw.png)
+![](https://i.imgur.com/SAVqJLa.png){:width="50%" height="50%"}{: .center-block :}
 
 
 
 unfortunately machines dont really like treats as well as dogs but they really like numbers so this is what we will use to model the problem
 in particular we use three fundamental numerical signals: _state_, _action_, _reward_.
 
-**spiegare un po' meglio stato e azione**
-State signal encodes everything the action can't directly control, or what happens to the environment as consequence of the action if you will while hopefully what action and reward signals encode is already clear
-**In sostanza la policy ci dice quale azione eseguire**
-we also need a function that given a state will spit out the actions that maximize the expected reward, this function is called policy and it has to be optimized in the training process
+In reinforcement learning, a "state" refers to the current situation or configuration of a system, like the arrangement of pieces on a chessboard in the Sicilian Defense. . It encapsulates the situation at a given moment. 
+"Actions" are the choices or moves that can be made from that state, such as moving a specific chess piece to a different position.
 
-** diagramma su azione stato policiy**
-this approach has been tested in various cases where makes sense to have a model of the problem based on those three fundamental signals for example 
-a tiny robot exploring a new environment in search of something: in this case the reward will tell the robot when it found the thing it was searching for,
-or a program that can play some table games better than any human would do: in this case the reward will tell the program when it got a win or a lose
+![](../assets/img/state_action.png)
+
+When an action is taken, it leads to a new state—a different snapshot of the system. In this dynamic process, the actions we choose impact the subsequent states, creating a chain of cause and effect. 
+
+ "Rewards" are numerical signals that measure how well an agent is performing a specific task. In the context of a chess game, a reward can be given based on factors such as winning or losing the game, capturing an opponent's piece, or achieving a strategic advantage. The reward serves as feedback to the agent, guiding its learning process by reinforcing actions that lead to positive outcomes and discouraging actions that lead to negative outcomes. The agent's ultimate objective is to learn to take actions that maximize cumulative rewards over time
+
+
+We also need another ingredient: the _policy_ function.  
+The "policy" (denoted by $\pi$) determines the behavior of an agent in a given state, associating at each state the action to take.
+The goal of reinforcement learning is to find the _optimal_ policy, i.e. find for each state the action that maximizes the expected cumulated reward or, in other words, the best action to take on the "long term".
+
 ![](https://i.imgur.com/tO6b7ur.png)
 
 
-In this project we trained a policy to learn how to play the famous table game called "connect 4"
+this approach has been tested in various cases where makes sense to have a model of the problem based on those three fundamental signals, and Reinforcement Learning has been proven to be very effective in many fields, such as:
+
+Game Playing: RL has been used to train agents that excel at playing complex games like chess, Go, and video games.
+
+Robotics: RL has been applied to teach robots to perform tasks such as grasping objects, walking, or navigating through environments.
+
+Recommendation Systems: RL can be used to personalize recommendations in areas like e-commerce, streaming platforms, and online advertising.
+
+Natural Language Processing: Recently RL has been used to fine-tune large language models like ChatGPT, achieving state-of-the-art results in conversational AI.
+
+In this project we trained a policy to learn how to play the well known table game called "4 in a row"
+
 ![](https://i.imgur.com/KkOFQ39.png)
 
-the rules are simple, there is a 8x7 grid placed vertically and two players with coins of different colour (one colour for each player), every player can place a coin in one of the columns of the grid and it will fall down into the lowest empty cell of that column
-when one of the player places a coin such that he creates a pattern of 4 aligned (in all directions including diagonals) coins of the same type then there is a win and the reward hits its maximum
+"4 in a row" or "Connect 4" is a two-player game played on a grid of 6 rows and 7 columns. Players take turns dropping colored discs (typically red and yellow) from the top into any column. The objective is to be the first to connect four of one's own discs vertically, horizontally, or diagonally. If all spaces are filled without a winner, the game ends in a draw.
 
 
 # 2. (Paolo con esempio gelato) Spiegazione veloce del deep Q learning
